<resources>
    <string name="app_name">My FAST</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>

    <string name="title_myprofile">My Profile</string>
    <string name="title_mygroup">Group</string>
    <string name="title_findalumni">Find Alumni</string>
    <string name="title_kabar">Kabar Alumni</string>
    <string name="title_katalog">Katalog Usaha</string>
    <string name="title_pustaka">Pustaka Digital</string>

    <string name="title_fast">FAST</string>
    <string name="title_pengurus">Pengurus</string>
    <string name="title_chapter">Chapter</string>
    <string name="title_berita">Berita FAST</string>
    <string name="title_proker">Program Kerja</string>
    <string name="title_event">Kalender Kegiatan</string>
    <string name="title_laporan">Laporan</string>
    <string name="title_shop">Shop</string>

    <string name="title_invite">Undang Teman</string>
    <string name="title_setting">Setting</string>
    <string name="title_about">Tentang Aplikasi</string>
    <string name="title_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">My FAST Apps</string>

</resources>
